# Zero-Knowledge-in-Rust

./: LICENSE  README.md
.github/workflows/: rust.yml
10_zk_rollup/: Cargo.toml
10_zk_rollup/src/: main.rs
11_zk_rollup_token_transfer/: Cargo.toml  README.md
11_zk_rollup_token_transfer/src/: main.rs
12_zk_rollup_balance/: Cargo.toml
12_zk_rollup_balance/src/: main.rs
13_zk_framework/: Cargo.toml
13_zk_framework/src/circuits/: 2_commitment.rs  arithematic.rs  commitment.rs
13_zk_framework/src/utils/: private_transfer.rs
2_rsa_cryptography/src/: main.rs
3_digital_signature/: Cargo.toml
3_digital_signature/src/: main.rs
4_pedersen_commitment/src/: main.rs
5_schnorr_zkp/: Cargo.toml
5_schnorr_zkp/src/: main.rs
6_arithmetic_circuit/: Cargo.toml
6_arithmetic_circuit/src/: main.rs
7_zk_snark/src/: main.rs
8_halo2_recursive_snark/: Cargo.toml
8_halo2_recursive_snark/src/: main.rs
9_zk_stark/: Cargo.toml
9_zk_stark/src/: main.rs
arithmetic_circuit/: Cargo.toml
arithmetic_circuit/src/: main.rs
digital_signature/: Cargo.toml
digital_signature/src/: main.rs
pedersen_commitment/: Cargo.toml
pedersen_commitment/src/: main.rs
private_transfer_zkp/: Cargo.toml
private_transfer_zkp/src/: main.rs
rsa_cryptography/: Cargo.toml
rsa_cryptography/src/: main.rs
schnorr_zkp/src/: main.rs
simple_hash/: Cargo.toml
simple_hash/src/: main.rs
src/: Cargo.toml
zk_framework/: Cargo.toml
zk_framework/src/: README.md
zk_rollup_balance/src/: main.rs
zk_rollup_token_transfer/: Cargo.toml
zk_snark/: Cargo.toml
(+3 files in other folders)
