[package]
name = "digital_signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.6"          # Version for rsa crate
sha2 = "0.10"        # Version for SHA-2 hashing algorithms
rand = "0.8"         # Version for random number generation

