[package]
name = "halo2_recursive_snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { version = "0.3.0", features = ["pasta"] }
halo2curves = { version = "0.7.0" }
rand = "0.8.5"
group = "0.13"

